# wx_simple_opengl

./: CMakeLists.txt  CMakePresets.json  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
src/: Info.plist  main.cpp  openglcanvas.cpp  openglcanvas.h
